# recipe-finder

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  DB_SCHEMA.md  Dockerfile  README.md  init_db.sh  schema.sql
backend/src/: main.rs
backend/src/db/: pool.rs
backend/src/health/: tests.rs
backend/src/ingredients/: handlers.rs  mod.rs  models.rs  tests.rs
backend/src/recipes/: handlers.rs  models.rs  tests.rs
backend/src/users/: handlers.rs  jwt.rs  mod.rs  models.rs
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  Carousel.tsx  Icon.tsx  Input.tsx  Modal.tsx  NavigationBar.tsx  PastaPattern.tsx  SectionTitle.tsx  Sidebar.tsx  Typeahead.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/layout/: CuisineContext.tsx  Layout.tsx
frontend/src/pages/Home/: HomePage.tsx
frontend/src/pages/Ingredients/: IngredientsListPage.tsx
frontend/src/pages/Login/: AuthProvider.tsx  LoginPage.tsx  useLogin.ts
frontend/src/pages/Profile/: ProfilePage.tsx
frontend/src/pages/Recipes/: RecipeCard.tsx  Recipes.tsx  recipes-carousel.css
frontend/src/pages/Recipes/components/: RecipeCard.tsx  RecipesCarousel.tsx  RecipesSearch.tsx
frontend/src/pages/Recipes/hooks/: useRecipeSearch.ts
frontend/src/pages/SavedRecipes/: SavedRecipesPage.tsx
