[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
url = "2"
argon2 = "0.5"
rand = "0.8"
jsonwebtoken = "9"
futures = "0.3"
actix-web-httpauth = "0.8"
actix-multipart = "0.6"
futures-util = "0.3"
actix-files = "0.6"
sanitize-filename = "0.5"
